--- a/public/schoolClass/teacherUnionMaster.html
+++ b/public/schoolClass/teacherUnionMaster.html
@@ -40,6 +40,7 @@
 <script type="application/javascript" src="../openvidu-browser-2.6.0.js"></script>
 <script type="application/javascript" src="../ExRTCSDK-2.4.0.js"></script>
 <script type="application/javascript" src="./js/qrcode.js"></script>
+<script type="application/javascript" src="./js/platform.js"></script>
 
 <style type="text/css">
 
@@ -123,7 +124,7 @@ video{
 				  <a id="show_talk" href="javascript:showTalkDiv();" class="operation_menu_t_btn" string_id="string_open_taolun" text='打开讨论区' style="display: none;">关闭讨论区</a>
 		          <a id='language_select' href="javascript:changeLanguage();" class="En_icon_i Chinese_icon_i"></a>
 		      </div>
-		      <div class="questionDiv">
+		      <div class="questionDiv" id="record_tip">
 				    <div class="questionTip">
 				            <div class="cont">
 				                <div class="head">如何开启同步录制</div>
@@ -278,9 +279,11 @@ video{
 	  		$("#language_select").removeClass("En_icon_i");
 	  		$("#language_select").addClass("Chinese_icon_i");
 	  	  }
-
 	      changePPTLanguage();
-
+          var browser = platform.name;
+          if(browser.indexOf("Electron") != -1){
+              $("#record_tip").hide();
+          }
     }
 
     function onIndicatorChanged(element){
