--- a/public/elearnigClass/home.html
+++ b/public/elearnigClass/home.html
@@ -15,7 +15,7 @@
     <div class="inner">
         <div class="nav">
     <!--<div class="logo"><img src="img/icon_yunClassLogo.png"/></div>-->
-    <div class="logo">阿坝州云校</div>
+    <div class="logo"><img src="img/abz-logo.png"  /></div>
     <div class="userInfo">
         <div class="my_flex">
             <div class="avatar">
