--- a/public/elearnigClass/createClass.html
+++ b/public/elearnigClass/createClass.html
@@ -8,7 +8,11 @@
 <body>
 <div class="topDiv">
     <h1>正在开课</h1>
-    <span class="courseBtn" >新建课堂</span>
+    <span class="courseBtn" onclick="createClass()">新建课堂</span>
 </div>
+<script src="../schoolClass/js/jquery.min.js"></script>
+<script type="application/javascript" src="../schoolClass/js/layer/layer.js"></script>
+<script type="application/javascript" src="../schoolClass/js/service.js"></script>
+<script src="js/createClass.js"></script>
 </body>
 </html>
