--- a/public/elearnigClass/createClass.html
+++ b/public/elearnigClass/createClass.html
@@ -10,6 +10,26 @@
     <h1>正在开课</h1>
     <span class="courseBtn" onclick="createClass()">新建课堂</span>
 </div>
+<div class="list">
+    <!--
+     <div class="list_item">
+         <div class="left_image">
+         <img src="" alt="">
+         </div>
+         <div class="middle_content">
+         <div>阿坝州数学课 <span>已发布</span></div>
+         <div>授课老师:</div>
+         <div>上课时间:</div>
+         <div>课程概述:</div>
+         </div>
+         <div class="right_oper">
+         <div>直播</div>
+         <div>编辑</div>
+         <div>删除</div>
+         </div>
+         </div>
+     -->
+</div>
 <script src="../schoolClass/js/jquery.min.js"></script>
 <script type="application/javascript" src="../schoolClass/js/layer/layer.js"></script>
 <script type="application/javascript" src="../schoolClass/js/service.js"></script>
