--- a/public/elearnigClass/home.html
+++ b/public/elearnigClass/home.html
@@ -54,16 +54,19 @@
 <div class="class_createContent">
     <div class="createNav">
         <div class="createLeft">新建课堂</div>
-        <div class="createRight">x</div>
+        <div class="createRight" onclick="maskClick()">x</div>
     </div>
-    <div class=""></div>
     <div class="content">
         <div>
             课程名称: <input id="class_name" type="text">
         </div>
         <div>
             课程封面:
-            <button id="uploadImage">上传</button>
+            <div class="image_box">
+
+            </div>
+            <button id="uploadImage" onclick="uploadImage()">上传</button>
+
         </div>
         <div>
             课程概述: <textarea id="class_info"></textarea>
@@ -81,19 +84,21 @@
                 <span>操作</span>
             </div>
             <div class="table_data">
-                <div class="list_item">
-                    <span>1</span>
-                    <span><input type="text"></span>
-                    <span>授课老师</span>
-                    <span>授课时间</span>
-                    <span class="deleteClass">删除</span>
-                </div>
+                <!--
+                 <div class="list_item">
+                                     <span>1</span>
+                                     <span><input type="text"></span>
+                                     <span>授课老师</span>
+                                     <span>授课时间</span>
+                                     <span class="deleteClass">删除</span>
+                                 </div>
+                 -->
             </div>
             <div class="table_bottom">
                 <button onclick="addClass()">添加课时</button>
-                <input type="checkbox">立即发布
+                <input id="isPublish" type="checkbox" onchange="isPublish_change()">立即发布
                 <div>
-                    <button>提交</button>
+                    <button onclick="submitClass()">提交</button>
                 </div>
             </div>
         </div>
@@ -101,6 +106,7 @@
 
 </div>
 <div class="mask" onclick="maskClick()"></div>
+<input id="upload" type="file" accept=".jpg,.png,.gif,.PNG,.JPG,.GIF">
 
 <!-- 新建课堂模块 end-->
 
@@ -109,13 +115,35 @@
 <script type="application/javascript" src="../schoolClass/js/layer/layer.js"></script>
 <script type="application/javascript" src="../schoolClass/js/service.js"></script>
 <script>
+    // 课程封面
+    var imagePath = '';
+    //是否发布
+    var isPublish = 2;
+    //章节index
+    var class_index = 1;
+    var teacherId,teacherName;
     $(function () {
 
-        var teacherId = Service.getQueryString("teacherId");
-        var teacherName = Service.getQueryString("teacherName");
+        teacherId = Service.getQueryString("teacherId");
+        teacherName = Service.getQueryString("teacherName");
+
+        //获取用户信息
         getUserById();
+
+        //给iframe赋值
         $('#classInfo_iframe').attr('src', 'createClass.html?teacherId=' + teacherId + '&teacherName=' + teacherName + '')
         $('#myFile_iframe').attr('src', 'https://jiaoxue.maaee.com:8099/#/antPlate?ident=' + teacherId + '&fileId=-1&title=蚁盘题目&phoneType=0')
+
+
+        //默认添加一行
+        $('.table_data').append("<div class='list_item'>\n" +
+                                            "                                 <span>"+class_index+"</span>\n" +
+                                            "                                 <span><input type='text' onkeyup='input_chapterName("+(class_index - 1)+")'></span>\n" +
+                                            "                                 <span>"+teacherName+"</span>\n" +
+                                            "                                 <span> <input type='text' onkeyup='input_chapterTime("+(class_index - 1)+")'> </span>\n" +
+                                            "                                 <span onclick='delete_chapter("+(class_index - 1)+")'>删除</span>\n" +
+                                            "                                 </div>");
+
 
         $('#classInfo').on('click', function () {
             $('#classInfo').addClass('active');
@@ -161,6 +189,7 @@
                     if (res.success) {
                         $('#user_avatar').attr('src', res.response.avatar);
                         $('.username').text(res.response.userName);
+
                     } else {
                         alert('用户不存在');
                     }
@@ -173,33 +202,104 @@
 
     })
 
+    function isPublish_change(){
+        console.log();
+        if($('#isPublish').attr('checked')){
+            isPublish = 1;
+        }else{
+            isPublish = 2;
+        }
+    }
+
     //子页面调用新建课堂
     function createClass() {
         $('.class_createContent').show(150);
         $('.mask').show();
     }
 
+    //关闭新建课堂小窗口
     function maskClick() {
         $('.mask').hide();
         $('.class_createContent').hide();
     }
 
+    //添加课时章节
     function addClass() {
         console.log('添加课时');
+        class_index++;
         $('.table_data').append("<div class='list_item'>\n" +
-            "                                 <span>1</span>\n" +
-            "                                 <span><input type='text'></span>\n" +
-            "                                 <span>授课老师</span>\n" +
-            "                                 <span>授课时间</span>\n" +
-            "                                 <span class='deleteClass'>删除</span>\n" +
+            "                                 <span>"+class_index+"</span>\n" +
+            "                                 <span><input onkeyup='input_chapterName("+(class_index - 1)+")' type='text'></span>\n" +
+            "                                 <span>"+teacherName+"</span>\n" +
+            "                                 <span> <input onkeyup='input_chapterTime("+(class_index - 1)+")' type='text'> </span>\n" +
+            "                                 <span onclick='delete_chapter("+(class_index - 1)+")'>删除</span>\n" +
             "                                 </div>");
 
     }
 
+    //删除课时章节
+    function delete_chapter(index){
+        console.log(index);
+        console.log('删除');
+        console.log($('.table_data > .list_item').eq(0),'table_data');
+//        $('.table_data > .list_item').eq(index).remove();
+    }
     $('.deleteClass').live('click', function () {
 //        console.log(this);
 //          this.parent.remove();
         console.log($(this).parent().remove());
     })
+
+    function submitClass(){
+        console.log($('#class_name').val(),'课程名称');
+        console.log(imagePath,'课程封面');
+        console.log($('#class_info').val(),'课程概述');
+        console.log(isPublish,'是否立即发布');
+        console.log(teacherId,'发布者id');
+        console.log(teacherId,'课表名字');
+        console.log(teacherId,'直播时间');
+        console.log(teacherId,'userId');
+        console.log(teacherId,'课表序列');
+    }
+
+    function input_chapterName(index){
+        console.log(index);
+        console.log('章节名称');
+    }
+
+    function input_chapterTime(index){
+        console.log('章节时间');
+        console.log(index);
+    }
+
+//    上传图片
+    function uploadImage(){
+                $("#upload").click();
+                //取消加绑定change事件解决change事件无法控制
+                $("#upload").off("change");
+                $("#upload").change(function () {
+                    if (this.files[0]) {
+                        var formData = new FormData();
+                        formData.append("file" + 0, this.files[0]);
+                        formData.append("name" + 0, this.files[0].name);
+                        $.ajax({
+                            type: "POST",
+                            url: "https://jiaoxue.maaee.com:8890/Excoord_Upload_Server/file/upload",
+                            enctype: 'multipart/form-data',
+                            data: formData,
+                            // 告诉jQuery不要去处理发送的数据
+                            processData: false,
+                            // 告诉jQuery不要去设置Content-Type请求头
+                            contentType: false,
+                            success: function (res) {
+                                //返回在线图片地址
+                                console.log(res);
+                                imagePath = res;
+                                $('.image_box').html("<img src="+res+" class='class_image'>")
+                            }
+                        });
+                    }
+                })
+    }
 </script>
 </html>
