--- a/public/schoolClass/unionClassList.html
+++ b/public/schoolClass/unionClassList.html
@@ -8,6 +8,7 @@
     <script type="application/javascript" src="js/jquery.min.js"></script>
     <script type="application/javascript" src="js/layer/layer.js"></script>
     <script type="application/javascript" src="js/service.js"></script>
+    <script type="application/javascript" src="js/platform.js"></script>
     <style type="text/css">
         body,html{
             margin: 0;
@@ -102,7 +103,27 @@
             margin-top: 42px;
             background-color: white;
             margin-bottom: 15px;
-            border: 2px #C4DAFF solid;
+            border:none;
+        }
+        .self .rightCont > #title{
+            font-size: 18px;
+            background-color: #FFEBC4 !important;
+            color: #333;
+            position: absolute;
+            top: -58px;
+            left: -2px;
+            width: 70%;
+            border-radius: 4px;
+            line-height: 40px;
+            padding: 0 22px;
+            box-sizing: border-box;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            overflow: hidden;
+        }
+        .self > .joinBtn{
+            background: #F49242 !important;
+
         }
         #title{
             font-size: 18px;
@@ -120,6 +141,7 @@
             white-space: nowrap;
             overflow: hidden;
         }
+
         #main_teacher_name,#union_teacher_name{
             margin-bottom: 12px;
         }
@@ -245,7 +267,16 @@
                    $(template.children("div").get(0)).attr("pass",pass);
                    template.find("#title").text(title);
                    template.find("#main_teacher_name").text("主讲老师 : "+openTeacher.userName);
-                   template.find("#join_class").attr("onclick","joinUnionClass("+vid+");");
+                   if(openTeacher.colUid == teacherId){
+                       $(template.children("div").get(0)).addClass("self");
+                       template.find("#join_class").html("继续<br/>上课");
+                       template.find("#join_class").attr("onclick","continueClass("+info.clazzId+",'"+info.title+"','"+info.password+"');");
+                   }else{
+                       $(template.children("div").get(0)).removeClass("self");
+                       template.find("#join_class").html("加入<br/>课堂");
+                       template.find("#join_class").attr("onclick","joinUnionClass("+vid+");");
+                   }
+
                    template.find("#start_time").text("开课时间 : "+startTime);
 
                    var unionTeacherNames = "";
@@ -272,6 +303,17 @@
        },onError:function(error){
 
        }})
+    }
+
+    function continueClass(clazzId,title,password){
+        var NParams = "";
+//        var browser = platform.name;
+//        if(browser.indexOf("Electron") != -1){
+//            NParams = "&startType=1_n";
+//        }
+        NParams = "&startType=1_n";
+        var url = "teacherUnionMaster.html?clazzId="+clazzId+"&userId="+teacherId+"&title="+title+"&livePassword="+password+"&userName="+teacherName+""+NParams;
+        window.open(url,"CLASS_WINDOW");
     }
 
     function datetimeFormat(longTypeDate){
